deleted:    11.png 	modified:   figures/adcp_moorings_roi.jpg 	new file:   figures/annual_300_400_451_1.jpeg 	new file:   figures/annual_300_400_451_currents1.jpeg 	modified:   figures/biomass_40m_104m.png 	modified:   figures/biomass_40m_104m_2018.png 	new file:   figures/biomass_40m_2019_Kollam_l1.jpeg 	deleted:    figures/figures_submit.tar.xz 	modified:   figures/figures_submit/fig_05_biomass_40m_104m_2018.png 	renamed:    figures/figures_submit/fig_09_40m_biomass_wavelet_2018.jpeg -> figures/figures_submit/fig_09_40m_biomass_wavelet_2018a.jpeg 	renamed:    figures/figures_submit/fig_10_ss_wavelet_2018.jpeg -> figures/figures_submit/fig_10_ss_wavelet_2018a.jpeg 	new file:   figures/wavelet_annual_band.png 	deleted:    figures/west_coast_wavelet_40m.png 	modified:   figures/west_coast_wavelet_40m_scale.png 	modified:   figures/west_coast_wavelet_40m_scale_2018.png 	renamed:    figures/west_coast_wavelet_ss_scale.png -> figures/west_coast_wavelet_ss_chl.png 	modified:   figures/west_coast_wavelet_ss_scale_2018.png 	modified:   scripts/map.ipynb 	modified:   writings/bc_writing/bs_citations.bib 	modified:   writings/bc_writing/bs_manuscript.pdf 	modified:   writings/bc_writing/bs_manuscript.tex

--- a/writings/bc_writing/bs_citations.bib
+++ b/writings/bc_writing/bs_citations.bib
@@ -912,3 +912,13 @@
 	year={2022},
 	publisher={Marine Biological Association of India, Kochi}
 }
+@article{shi2022phytoplankton,
+	title={Phytoplankton biomass dynamics in the Arabian Sea from VIIRS observations},
+	author={Shi, Wei and Wang, Menghua},
+	journal={Journal of Marine Systems},
+	volume={227},
+	pages={103670},
+	year={2022},
+	publisher={Elsevier}
+}
+
