--- a/writings/bc_writing/bs_manuscript.tex
+++ b/writings/bc_writing/bs_manuscript.tex
@@ -32,7 +32,7 @@ column) as we move to poleward along the slope in EAS. The range of variation of
 	\subsection{Background}
 	Zooplankton plays a vital role in food web of pelagic ecosystem by enabling the hierarchical transport of organic matter from primary producers to higher trophic levels impacting the fish population and the carbon pump of the deep ocean \citep{ohman2001density,le2016global}. They are presumably the largest migrating organisms in terms of biomass \citep{hays2003review} which occurs in diel vertical migration (DVM). Zooplanktons depend not only on phytoplankton but other environmental parameters (e.g. Mixed layer depth, insolation, Oxygen, thermocline, nutrient availability, chlorophyll concentration and daily primary production). The biological productivity of the ocean is essentially connected with physics and chemistry \citep{subrahmanyan1959studiespart2, ryther1966primary, qasim1977biological, nair1970primary,banse1995zooplankton,mccreary2009biophysical, vijith2016consequences,amol2020modulation}. The dynamic ocean results in varying physico-chemical properties, leading to bloom and growth of planktons in favourable conditions. The changes are strongly influenced by the seasonal cycle in the North Indian Ocean (NIO; north of ~5 $^o$N of Indian Ocean). The eastern boundary of Arabian Sea contains the West India Coastal Current (WICC; \citep{patil1964hydrography,ramamirtham1965hydrography, banse1968hydrography,shetye1991coastal,mccreary1993numerical, shankar1997dynamics, shetye1998coastal, maheswaran2000upwelling, amol2014observed, chaudhuri2020observed,chaudhuri2021observed}) which reverses seasonally, flowing poleward (equatorward) during November to February (June to September). 
 	
-	The direct consequence of this reversal is the seasonal cycle of thermocline, oxycline and thickness of mixed Layer Depth (MLD) induced by upwelling favourable conditions in summer and downwelling favourable conditions in winter in eastern Arabian Sea (EAS). Further, the phytoplankton biomass and chlorophyll concentration changes with the season \citep{subrahmanyan1960studies, banse1968hydrography, levy2007basin, vijith2016consequences}. Upwelling in  summer monsoon leads to maximum chlorophyll growth in the entire EAS \citep{ banse1968hydrography, banse2000geographical, mccreary2009biophysical, hood2017biogeochemical}. During winter monsoon, the convective mixing induced winter mixed layer \citep{shetye1992does, madhupratap1996mechanism, levy2007basin, vijith2016consequences, shankar2016inhibition, keerthi2017physical} results in winter chlorophyll peak in northern EAS (NEAS) while the downwelling Rossby waves modulate chlorophyll along the southern EAS (SEAS) albeit limited to coast and islands \citep{amol2020modulation}. (For a detailed description on EAS division, please refer figure 1 of \citep{shankar2019role}.
+	The direct consequence of this reversal is the seasonal cycle of thermocline, oxycline and thickness of mixed Layer Depth (MLD) induced by upwelling favourable conditions in summer and downwelling favourable conditions in winter in eastern Arabian Sea (EAS). Further, the phytoplankton biomass and chlorophyll concentration changes with the season \citep{subrahmanyan1960studies, banse1968hydrography, levy2007basin, vijith2016consequences}. Upwelling in  summer monsoon leads to maximum chlorophyll growth in the entire EAS \citep{ banse1968hydrography, banse2000geographical, mccreary2009biophysical, hood2017biogeochemical,shi2022phytoplankton}. During winter monsoon, the convective mixing induced winter mixed layer \citep{shetye1992does, madhupratap1996mechanism, levy2007basin, vijith2016consequences, shankar2016inhibition, keerthi2017physical,shi2022phytoplankton} results in winter chlorophyll peak in northern EAS (NEAS) while the downwelling Rossby waves modulate chlorophyll along the southern EAS (SEAS) albeit limited to coast and islands \citep{amol2020modulation}. (For a detailed description on EAS division, please refer figure 1 of \citep{shankar2019role}.
 	
 	The zooplankton grazing peak is instantaneous with no time delay from peak phytoplankton production \citep{li2000determines}, but its population growth lags \citep{rehim2012dynamical, almen2020temperature} depending on its gestation period and other limiting aspects. While some studies suggest that the peak timing of zooplankton may not change in parallel with phytoplankton blooms \citep{winder2004climatic}, others indicate that lag exists between primary production and the transfer of energy to higher trophic levels \citep{brock1992interannual, brock1991phytoplankton}. A recent work \citep{aparna2022seasonal} had shown that peak zooplankton population may never occur even with a bloom in phytoplankton such as in SEAS, leading to the collapse of ecological models and succeeding food webs of higher trophic levels.  
 	
@@ -97,7 +97,7 @@ column) as we move to poleward along the slope in EAS. The range of variation of
 %	The high biomass regime in the upper ocean and low biomass regime in deeper depths is differentiated using the 215 $mg\ m^{-3}$ biomass contour. For simplicity, this biomass contour is abbreviated to be z215 and its depth is denoted as D215 henceforth; region lying above this contour is the upper ocean biomass. The choice of 215 $mg\ m^{-3}$ isn't abrupt; it is carefully chosen to accommodate the seasonal variation, as a shift to biomass contour lower than the z215 would be unviable as our data is only till 140 m depth. A higher biomass contour would lead to inferior view of the seasonal cycle such as in the case of Kanyakumari and Okha where D215 is often low enough to reach $\sim$20 - 30 m depths. The climatology of zooplankton biomass at different mooring location is discussed at locations northward starting from southern mooring location (Fig. 4).
 	
 
-	The high biomass regime in the upper ocean and low biomass regime in deeper depths is differentiated using a biomass contour: 215 $mg \ m^{-3}$ off Mumbai, Goa and Kollam; 200 $mg \ m^{-3}$ off Jaigarh and Udupi; 175 $mg \ m^{-3}$ off Okha and Kanyakumari. For simplicity, this biomass contour is abbreviated to be z215, z200 \& z175 and its depth is denoted as D215, D200 \& D175, respectively. The choice of biomass contour isn't abrupt; firstly, it is carefully chosen to accommodate the seasonal variation, as a shift to biomass contour lower than the z215 would be unviable as our data is only till 140 m depth, for example in the case of Kollam, the D215 exceeds 140 during few months of 2022 (\cref{fig:fig3}). A higher biomass contour would lead to inferior view of the seasonal cycle as in the case of Kanyakumari and Okha where 215 $mg \ m^{-3}$ biomass contour is often low enough to reach $\sim$20 - 30 m depths, hence z175 is chosen here. Secondly, it allows us to link the seasonal variation of biomass to the physico-chemical properties.
+	The high biomass regime in the upper ocean and low biomass regime in deeper depths is differentiated using a biomass contour: 215 $mg \ m^{-3}$ off Mumbai, Goa, Kollam, Jaigarh and Udupi; 175 $mg \ m^{-3}$ off Okha and Kanyakumari. For simplicity, this biomass contour is abbreviated to be z215 \& z175 and its depth is denoted as D215 \& D175, respectively. The choice of biomass contour isn't abrupt; firstly, it is carefully chosen to accommodate the seasonal variation, as a shift to biomass contour lower than the z215 would be unviable as our data is only till 140 m depth, for example in the case of Kollam, the D215 exceeds 140 during few months of 2022 (\cref{fig:fig3}). A higher biomass contour would lead to inferior view of the seasonal cycle as in the case of Kanyakumari and Okha where 215 $mg \ m^{-3}$ biomass contour is often low enough to reach $\sim$20 - 30 m depths, hence z175 is chosen here. Secondly, it allows us to link the seasonal variation of biomass to the physico-chemical properties.
 	
 	The climatology of zooplankton biomass and ZSS (\cref{fig:fig4}) is discussed at locations northward starting from southernmost mooring site off Kanyakumari. 
 	
@@ -107,7 +107,7 @@ column) as we move to poleward along the slope in EAS. The range of variation of
 	\subsection{Southern EAS}
 	During mid-march off Kanyakumari, the depth of 23 $^o$ C isotherm (henceforth D23) shallows along-with oxycline (marked by 2.1 $ml \ L^{-1}$) and a rise in biomass is observed (\cref{fig:fig4} g1). The z175 is shallower from May onward to October and the zooplankton biomass is comparatively higher than rest of the year. The D175 deepens starting from October and the relatively high biomass in water column is maintained till late December. However, this increase in D175 isn't reflected as an increase in ZSS because of low biomass in the entire water column. A gradual increase is seen in the chlorophyll biomass starting from April and the peak is attained in June (\cref{fig:fig4} g2). The ZSS is increased in June, however the growth is minimal. There is almost no seasonal variation in ZSS off Kanyakumari (seasonal ZSS range, 2.67 $gm\ m^{-2}$) as compared to the ZSS variation at the nearest northern mooring site off Kollam (seasonal ZSS range, 4.86 $gm\ m^{-2}$), where a strong seasonal cycle is observed and the D215 is deeper for any given month.
 	
-	Off Kollam, a higher biomass is present in the larger portion of water column and the D215 is at $\sim$ 110 m during Mar-May (\cref{fig:fig4} f1). Similar to z175 off Kanyakumari, the decrease in biomass with depth is subtle below z215. Starting from March, the D215 begins to shallow with progress in time till August. During this period, a sharp decrease is seen in the D23 ($\sim$ 80 m in June to September) while the oxycline (1.7 $ml \ L^{-1}$) overshoots the thermocline (\cref{fig:fig4} f1). A steep rise in chlorophyll biomass is seen off Kollam and its peak is attained in August (\cref{fig:fig4} f2). The ZSS declines in the same period and reaches a minimum when the chlorophyll biomass is at its peak. The chlorophyll biomass decreases rapidly in the following months, while the ZSS increases and a maximum is seen during October. This feature was earlier reported by \citep{aparna2022seasonal} showing disproportionate interaction between zooplankton and phytoplankton. It begs the question about existing understanding of predator - prey relationship in a regional-scale ecological system. A similar feature is seen further north, off Udupi which sits at the transition zone of SEAS \& CEAS, albeit with a relatively weaker zooplankton biomass. The peak of chlorophyll and minimum of ZSS occurs in September (\cref{fig:fig4} e2) which is one month later than off Kollam. The 2.1 $ml \ L^{-1}$  oxygen contour overshoots thermocline, however it reaches to a much shallow depth of $\sim$ 20 m during July to October unlike any other location in our EAS study area. The D200 closely follows D23; with the gradual shallowing from March onward reaching $\sim$ 60 m in September and a steep decline afterwards till November (\cref{fig:fig4} e1). The decrease of biomass with depth is moderate in comparison to Kollam.
+	Off Kollam, a higher biomass is present in the larger portion of water column and the D215 is at $\sim$ 110 m during Mar-May (\cref{fig:fig4} f1). Similar to z175 off Kanyakumari, the decrease in biomass with depth is subtle below z215. Starting from March, the D215 begins to shallow with progress in time till August. During this period, a sharp decrease is seen in the D23 ($\sim$ 80 m in June to September) while the oxycline (1.7 $ml \ L^{-1}$) overshoots the thermocline (\cref{fig:fig4} f1). A steep rise in chlorophyll biomass is seen off Kollam and its peak is attained in August (\cref{fig:fig4} f2). The ZSS declines in the same period and reaches a minimum when the chlorophyll biomass is at its peak. The chlorophyll biomass decreases rapidly in the following months, while the ZSS increases and a maximum is seen during October. This feature was earlier reported by \citep{aparna2022seasonal} showing disproportionate interaction between zooplankton and phytoplankton. It begs the question about existing understanding of predator - prey relationship in a regional-scale ecological system. A similar feature is seen further north, off Udupi which sits at the transition zone of SEAS \& CEAS, albeit with a relatively weaker zooplankton biomass. The peak of chlorophyll and minimum of ZSS occurs in September (\cref{fig:fig4} e2) which is one month later than off Kollam. The 2.1 $ml \ L^{-1}$  oxygen contour overshoots thermocline, however it reaches to a much shallow depth of $\sim$ 20 m during July to October unlike any other location in our EAS study area. The D215 vaguely follows D23; with the gradual shallowing from March onward reaching $\sim$ 60 m in September and a steep decline afterwards till November (\cref{fig:fig4} e1). The decrease of biomass with depth is moderate in comparison to Kollam.
 	
 
 	\subsection{Central EAS}
@@ -116,7 +116,7 @@ column) as we move to poleward along the slope in EAS. The range of variation of
 %The ZSS off Jaigarh is identical but stronger to that of off Goa, owing to an higher biomass above z200 and the comparatively deeper D200. The D200 is restricted by D23 \& oxycline for most of the year and it only exceeds during October-December(Fig. 4c1). From the ZSS maximum in February, it steadily decreases and attains a minimum in September (coincides with lower D215), a rapid rise is seen in the following months. What's intriguing is a presence of strong seasonal cycle in ZSS off Jaigarh (7.52 $gm\ m^{-2}$, highest among all locations) although the seasonal variation in Chlorophyll biomass (Fig. 4c2) is visibly non-existent (0.55 $mg\ m^{-3}$, lowest among all locations). This is an exact opposite scenario of Kanyakumari mooring site, where an insignificant seasonal variation in ZSS (1.56 $gm\ m^{-2}$) is seen even though the chlorophyll biomass varies strongly (1.61 $mg\ m^{-3}$). 
 
 	
-	The ZSS off Jaigarh is identical but stronger to that of off Goa, owing to an higher biomass above z200 and the comparatively deeper D200 (\cref{fig:fig4} c1). The D200 follows D23 \& oxycline for most of the year and it only exceeds during October-December .  From the ZSS maximum in February (\cref{fig:fig4} c2), it steadily decreases and attains a minimum in September (coincides with lower D200), a rapid rise is seen in the following months. What's intriguing is a presence of strong seasonal cycle in ZSS off Jaigarh (10.38 $gm\ m^{-2}$, highest among all locations) although the seasonal variation in chlorophyll biomass (\cref{fig:fig4} c2) is visibly non-existent (0.15 $mg\ m^{-3}$, lowest among all locations). This is an exact opposite scenario of Kanyakumari site, where an insignificant seasonal variation in ZSS (2.67 $gm\ m^{-2}$) is seen even though the chlorophyll biomass varies strongly (1.62 $mg\ m^{-3}$). 
+	The ZSS off Jaigarh is identical but stronger to that of off Goa, owing to an higher biomass above z215 and the comparatively deeper D215 (\cref{fig:fig4} c1). The D215 follows D23 \& oxycline for most of the year and it only exceeds during October-December.  From the ZSS maximum in February (\cref{fig:fig4} c2), it steadily decreases and attains a minimum in September (coincides with lower D200), a rapid rise is seen in the following months. What's intriguing is a presence of strong seasonal cycle in ZSS off Jaigarh (10.38 $gm\ m^{-2}$, highest among all locations) although the seasonal variation in chlorophyll biomass (\cref{fig:fig4} c2) is visibly non-existent (0.15 $mg\ m^{-3}$, lowest among all locations). This is an exact opposite scenario of Kanyakumari site, where an insignificant seasonal variation in ZSS (2.67 $gm\ m^{-2}$) is seen even though the chlorophyll biomass varies strongly (1.62 $mg\ m^{-3}$). 
 	%The reason for the higher ZSS is looked upon in later section.
 		
 	Starting from Kollam (\cref{fig:fig4} f1) and moving northward to Jaigarh (\cref{fig:fig4} c1), we see that the core of high zooplankton biomass gradually shifts from summer monsoon (off Kollam) to winter monsoon (off Jaigarh), with the transition of upper ocean zooplankton biomass happening along Udupi and Goa. On the contrary, the chlorophyll biomass tends to have low seasonal range as we move northward from SEAS, with Jaigarh having the least seasonal variation.
@@ -137,12 +137,12 @@ column) as we move to poleward along the slope in EAS. The range of variation of
 	 
 	 
 	 
-	\section{The seasonal cycle}
+	\section{The seasonal cycle and variability}
 	In the following section we will describe the zooplankton biomass time series followed by a discussion on the seasonal cycle.
 
 	Biomass contour to demarcate upper (high biomass) to lower (low biomass) regimes is devised for each zooplankton time series to show their seasonality. A preliminary analysis of the biomass time series in daily and monthly averaged scale shows that the biomass decreases with increasing depth (\cref{fig:fig3}) at all the seven locations. The rate of biomass decrease with depth, roughly defined as the difference between the mean biomass at 40 m  and 104 m depth, is highest off Jaigarh and Mumbai as it has higher biomass in upper ocean (\cref{fig:fig6} c,b). This is followed by CEAS locations Goa and Udupi (\cref{fig:fig6} d,e). While the biomass decrease with depth is lower off Kollam from 2017 to 2020, it becomes considerably high from thereon (\cref{fig:fig6} f). The rate of decrease is lowest off Kanyakumari. Following is the order of their decrease rate of biomass: Jaigarh (96 $mg\ m^{-3}$), Mumbai (91 $mg\ m^{-3}$), Okha (79 $mg\ m^{-3}$), Udupi (78 $mg\ m^{-3}$), Kollam(73 $mg\ m^{-3}$), Goa (72 $mg\ m^{-3}$) and Kanyakumari (39 $mg\ m^{-3}$).  The mean and standard deviation is shown in \autoref{tab:table3}. Following poleward along the slope, the mean biomass at 40 m off Kanyakumari is the least $\sim$ 207 $mg\ m^{-3}$ which increases drastically to 272 $mg\ m^{-3}$ off Kollam. It decreases till Goa and then increases to a maximum of 278 $mg\ m^{-3}$ off Jaigarh. Off Mumbai the mean biomass is 272 $mg\ m^{-3}$, and further north off Okha, it declines to 230 $mg\ m^{-3}$. A similar trend is observed in mean biomass at 104 m depth of all locations and their corresponding standard deviation. A pattern that develops from this is observed, with lower mean biomass off Okha (northernmost of EAS) and off Goa (CEAS) bifurcated by higher mean biomass off Mumbai \& Jaigarh; while the lower mean biomass off Udupi (CEAS) and off Kanyakumari (Southernmost of EAS) is divided by higher mean biomass off Kollam. Similarly, from standard deviation of biomass it is inferred that the sites with higher biomass tends to have higher variation over time as in the case of Mumbai, Jaigarh and Kollam. 
 	
-	A comparatively weaker decline in zooplankton biomass with respect to depth off Okha (\cref{fig:fig3} a1,a2) at NEAS is agreeing with earlier reported data \cite{madhupratap2001mesozooplankton,smith2005mesozooplankton,wishner1998mesozooplankton} where oxygen deficit is thought to be the cause, particularly during summer monsoon seen in \citep{garcia2013oxygen} climatology (figure not shown). The sites at SEAS, especially off Kanyakumari and 2017 to 2020 off Kollam also have weaker decrease \citep{madhupratap2001mesozooplankton, aparna2022seasonal}. However, post 2020 the decline in biomass with depth off Kollam is similar to that off Mumbai in stark contrast to its previous years owing to a strong bloom in these years. This growth is reflected as an increase in biomass in the entire water column(\cref{fig:fig3} f1,f2) and deepening of D215. Analyzing the demarcating biomass contours (z175, z200, z215 of respective locations) we see a strong seasonality at NEAS, CEAS and SEAS (excluding Kanyakumari). Although a shallow and seasonally invariant D215 (D175) is seen for Goa and Kollam  during January 2019 to December 2020. While the z175 (z215,z200) is deeper in winter monsoon throughout EAS, at the NEAS regime, the upper ocean shows considerably high biomass during this period as in the case of Okha, Mumbai and Jaigarh. On the contrary, at SEAS regime the upper ocean shows higher biomass during summer monsoon as seen off Udupi, Kollam and Kanyakumari even though the z200 (z215, z175) is shallower in this period. 
+	A comparatively weaker decline in zooplankton biomass with respect to depth off Okha (\cref{fig:fig3} a1,a2) at NEAS is agreeing with earlier reported data \cite{madhupratap2001mesozooplankton,smith2005mesozooplankton,wishner1998mesozooplankton} where oxygen deficit is thought to be the cause, particularly during summer monsoon seen in \citep{garcia2013oxygen} climatology (figure not shown). The sites at SEAS, especially off Kanyakumari and 2017 to 2020 off Kollam also have weaker decrease \citep{madhupratap2001mesozooplankton, aparna2022seasonal}. However, post 2020 the decline in biomass with depth off Kollam is similar to that off Mumbai in stark contrast to its previous years owing to a strong bloom in these years. This growth is reflected as an increase in biomass in the entire water column(\cref{fig:fig3} f1,f2) and deepening of D215. Analyzing the demarcating biomass contours (z175, z215 of respective locations) we see a strong seasonality at NEAS, CEAS and SEAS (excluding Kanyakumari). Although a shallow and seasonally invariant D215 is seen for Goa and Kollam  during January 2019 to December 2020. While the z175 and z215 is deeper in winter monsoon throughout EAS, at the NEAS regime, the upper ocean shows considerably high biomass during this period as in the case of Okha, Mumbai and Jaigarh. On the contrary, at SEAS regime the upper ocean shows higher biomass during summer monsoon as seen off Udupi, Kollam and Kanyakumari even though the z215 \& z175 is shallower in this period. 
 	
 	\subsection{Seasonal cycle of biomass}
 	\label{sec:seasonalcyclebiomass}
@@ -170,17 +170,27 @@ column) as we move to poleward along the slope in EAS. The range of variation of
 	\subsubsection{The semi-annual cycle}
 	Although we observed the absence of annual cycle off Kanyakumari, the wavelet analysis shows presence of a semi-annual cycle from early 2019 to late 2021(\cref{fig:fig9} g1). This semi-annual feature is seen off Kollam (\cref{fig:fig9} f1) with moderate power and with a much higher power off Udupi (\cref{fig:fig9} 21) during 2018 to 2020. Much like the annual cycle off Goa, it's semi-annual period is weak to nearly non existent before 2020 and gets strengthened afterwards. Off Mumbai, the semiannual period is present from late 2018 to late 2020 and from 2022 onward. Fourier analysis shows that the semi-annual cycle off Udupi is comparable to its counterpart off Mumbai during the same period. 
 	
-	The higher beta ($\beta$) coefficients off Jaigarh and Kollam implies a significant contribution of low frequency variability (higher period) is more compared to the high frequency variability. In fact, a biennial peak is seen off Kollam in the Fourier analysis even with a 3 year record agreeing with earlier findings of \citep{aparna2022seasonal}, i.e, Kollam having a weak (strong) annual (biennial) cycle. 
+	The higher beta ($\beta$) coefficients off Jaigarh and Kollam implies a significant contribution of low frequency variability (higher period) is more compared to the high frequency variability. In fact, a biennial peak is seen off Kollam in the Fourier analysis even with a 3 year record agreeing with earlier findings of \citet{aparna2022seasonal}, i.e, Kollam having a weak (strong) annual (biennial) cycle. 
 	
-	\subsection{Intraseasonal and intra-annual variability of biomass}
-    The intraseasonal band, defined as the variability occurring between periods of few days to 90 days is split into two categories; a high-frequency part (period $<$ 30 days) and a low-frequency part (30 $<$ period $<$ 90 days) \citep{amol2014observed, chaudhuri2020observed}. In this manuscript, we focus on the variability in the range of 30 to 90 days period. 
-    
-    The presence of intraseasonal signals is observed in the wavelet analysis of biomass at 40 m (\cref{fig:fig7})and 104 m (\cref{fig:fig8}) as bursts during few months distinctive to each mooring location. The wavelet power at 40 m in intraseasonal band peaks during September to December off Mumbai, Jaigarh and Kanyakumari while no such general observation is found in other locations. However, the wavelet power at 104 m in comparison to 40 m suggests a decrease in strength of  intraseasonal band at respective locations. Lanczos filtered biomass in 30 to 90 day period shows that the intraseasonal variability is strong during August to November off all location (\cref{fig:fig11}). This is in contrast to the WICC intraseasonal band which is strong during winter monsoon \citep{amol2014observed, chaudhuri2020observed}. The intraseasonal variability is higher in the upper ocean, however it can extend to deeper depths ($\sim$ 140) for some years e.g, off Kollam during 2022 (\cref{fig:fig11} f). The magnitude of intraseasonal component is high as we move equatorward till Kollam and declines off Kanyakumari (\cref{fig:fig11} g). The intra-seasonal component's strength and its variability is transient in nature. For example, off Mumbai for 2020 (\cref{fig:fig11} b), the intra-seasonal variability is weak during January to May, but for 2021 for the same months the variability is high.
-    
-    As like the intraseasonal (30 - 90 days) component of seasonal cycle, the intra-annual (100 - 250 days) band tends to occur during August to November (\cref{fig:fig12}). However, the intra-annual band is stronger compared to the former; with higher power peaks seen in Fourier analysis of the biomass. Intra-annual variability increases as we move equatorward till Kollam, and off Kanyakumari the intra-annual variability is diminished. 
+	\subsection{Annual, intra-annual and intraseasonal variability}
+	The biomass at a given instance is decomposed to several exclusive period bands spanning days to months. DVM is the simplest variation (low period or high frequency) among many that determines zooplankton biomass at a given depth, with higher (lower) biomass during night (day) at the surface regime for a number of species. Our focus, however is on the variability occurring in the higher period (lower frequency) bands namely, annual, intra-annual and intraseasonal variability. \textbf{2019 off Kollam, figure can be added to explain it better}
+		
+	To capture the annual variability, the biomass is filtered with lanczos filter within period of 300 to 400 days. The annual variability shows that the contribution of this band to the time series of total biomass is very weak. The annual variability off Kanyakumari (standard deviation 3.64 $mg\ m^{-3}$) and Okha (3.73 $mg\ m^{-3}$) is low, while it is stronger at rest of the basin, with strongest variability off Jaigarh (9.05 $mg\ m^{-3}$). \textbf{add explanation, Upward phase propagation is observed off Goa and it's southern mooring sites}. Similar to the ocean currents \citep{amol2014observed,chaudhuri2020observed}, the annual filtered biomass decreases more with depth off Kollam than off Mumbai and the three CEAS sites. \textbf{include wavelet coherence results at 40 m of adjacent sites}. 
+	
+	The variability at intra-annual (100 - 250 days) band tends to be stronger compared to the annual variability and is strengthened during August to November (\cref{fig:fig12}) as seen during 2018, 2019 and 2022. Intra-annual variability increases as we move equatorward with higher variability seen off Goa, Udupi and Kollam, although off Kanyakumari the variability is diminished. However, Fourier analysis of the daily biomass time series suggests presence of signals within the intra-annual band off Kanyakumari, e.g, power peaks at $\sim$ 140 and $\sim$ 220 days implying that the variability is strictly restricted to narrow bands within intra-annual band. There is a significant variation in the strength of intra-annual variability (\cref{fig:fig12}) and its component (\cref{fig:fig7}) with time. For example, off Goa at 40 m during August to November of 2020 and 2022, the intra-annual component is weak and strong, respectively (\cref{fig:fig12}). This difference is due to the spread of energy among all intra-annual periods for 2022, while during 2020 the wavelet energy is only present in the semi-annual periods, resulting in a overall weaker intra-annual component. 
+	
+	
+    The intraseasonal band, defined as the variability occurring between periods of few days to 90 days is split into two categories; a high-frequency part (period $<$ 30 days) and a low-frequency part (30 $<$ period $<$ 90 days). The presence of low-frequency intraseasonal signals is observed in the wavelet analysis of biomass at 40 m (\cref{fig:fig7}) and 104 m (\cref{fig:fig8}) as bursts during few months distinctive to each mooring location. The wavelet power at 40 m in low-frequency intraseasonal band peaks during September to December off Mumbai, Jaigarh and Kanyakumari while no such general observation is found in other locations. However, the wavelet power at 104 m in comparison to 40 m suggests a decrease in its strength at respective locations. Lanczos filtered biomass in 30 to 90 day period shows that the intraseasonal variability is strong during August to November off all location (\cref{fig:fig11}). This is in contrast to the WICC intraseasonal band which is strong during winter monsoon \citep{amol2014observed, chaudhuri2020observed}. The low frequency intraseasonal variability is higher in the upper ocean, however it can extend to deeper depths ($\sim$ 140) for some years e.g, off Kollam during 2022 (\cref{fig:fig11} f). The magnitude of low-frequency intraseasonal component is high as we move equatorward till Kollam and declines off Kanyakumari (\cref{fig:fig11} g). As noted earlier in variability of the intra-annual component, the intra-seasonal component's strength and its variability is transient in nature. 
     
 	\newpage
 	
+	
+	\subsection{discussion}
+	interannual variability of CHl-a is less significant in comparison to the seasonal variability \citep{shi2022phytoplankton}.
+	
+	>> Deviation from climatology, 2019, off Goa, and Kanyakumari. Goa has lower biomass throught 2019.
+	
+	>> the net transport in upper 500 m is 10**7 m3/s in easter arabian sea, which flows out of the sea in summer. 10**6 in winter monsson (shi et al. 1999). 
 %    Interannual variability in zooplankton biomass is a complex phenomenon influenced by various factors. Studies have shown that zooplankton biomass fluctuations can be significant and are often linked to changes in environmental conditions and predator-prey dynamics ("undefined", 2009; Mackas et al., 2006; Hamilton et al., 2013). For instance, in the California Current system, interannual variability in zooplankton biomass is studied by filtering out the average annual cycle to better understand the underlying patterns (Mackas et al., 2006). Additionally, in the Canadian Arctic Archipelago, zooplankton biomass variability is linked to ocean properties, ice cover, and plankton dynamics on interannual time scales (Hamilton et al., 2013). The relationship between zooplankton biomass and other marine organisms is also crucial. In the Barents Sea, fluctuations in zooplankton biomass are inversely related to capelin stock size, explaining a significant portion of the interannual variation in total zooplankton biomass (Dalpadado et al., 2014). Furthermore, in the Strait of Georgia, Canada, the interannual variability in zooplankton biomass is studied in relation to the marine survivals of Chinook and Coho salmon, highlighting the intricate connections between different trophic levels in marine ecosystems (Perry et al., 2021). Climate variability plays a significant role in shaping interannual variations in zooplankton biomass. Studies have indicated that changes in hydrology, salinity, and temperature can impact zooplankton abundance and biomass values over time (Simm et al., 2014). Moreover, the influence of ocean climate, including factors like coastal upwelling, can drive interannual and longer-term variability in coastal plankton production, thereby affecting zooplankton dynamics (Robinson, 1994).    Overall, interannual variability in zooplankton biomass is a multifaceted phenomenon influenced by a combination of environmental factors, predator-prey interactions, and climate variability. Understanding these dynamics is essential for assessing the health and resilience of marine ecosystems over time.
 
 \linespread{1.5}	
@@ -419,7 +429,7 @@ column) as we move to poleward along the slope in EAS. The range of variation of
 
 \begin{figure}[htbp]
 	\centering
-	\includegraphics[width=\textwidth]{/media/scilab/disk_ranjan/works/backscatter_wc/figures/west_coast_wavelet_ss_scale.png} 
+	\includegraphics[width=\textwidth]{/media/scilab/disk_ranjan/works/backscatter_wc/figures/west_coast_wavelet_ss_chl.png} 
 	\captionsetup{justification=justified,font=footnotesize,skip=0.05\baselineskip,width=\textwidth}
 	\caption{Wavelet power spectra (Morlet) of zooplankton standing stock plotted against time as abscissa and period in days as ordinate. The wavelet power is in log$_2$ scale, the 95 \% significance is marked in black contours; The vertical white lines separates years. The right side panel shows the ZSS time series of 30 day rolling mean data (black)overlaid upon daily data (Grey). The 30 day rolling mean data of chlorophyll (solid blue line) is plotted over its daily data (cyan).}
 	\label{fig:fig9}
